tests/ui/attributes/codegen_attr_on_required_trait_method.stderr
error: the `cold` attribute cannot be used on required trait methods
  --> $DIR/codegen_attr_on_required_trait_method.rs:6:7
   |
LL |     #[cold]
   |       ^^^^
   |
   = help: the `cold` attribute can be applied to foreign functions and functions with a body
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
note: the lint level is defined here
  --> $DIR/codegen_attr_on_required_trait_method.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: the `link_section` attribute cannot be used on required trait methods
  --> $DIR/codegen_attr_on_required_trait_method.rs:10:7
   |
LL |     #[link_section = "__TEXT,__text"]
   |       ^^^^^^^^^^^^
   |
   = help: the `link_section` attribute can be applied to functions with a body and statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error: the `linkage` attribute cannot be used on required trait methods
  --> $DIR/codegen_attr_on_required_trait_method.rs:14:7
   |
LL |     #[linkage = "common"]
   |       ^^^^^^^
   |
   = help: the `linkage` attribute can be applied to foreign functions, foreign statics, functions with a body, and statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error: aborting due to 3 previous errors

